--- a/eventicoUI/src/app/event-venues/new-event-venue/new-event-venue.component.html
+++ b/eventicoUI/src/app/event-venues/new-event-venue/new-event-venue.component.html
@@ -1,4 +1,11 @@
-<div  [style.display]="showOverlay" class="overlay"><mat-spinner style="margin: auto;"></mat-spinner></div>
+<div  [style.display]="showOverlay" class="overlay">
+  <div class="indicator">
+    <svg width="16px" height="12px">
+      <polyline id="back" points="1 6 4 6 6 11 10 1 12 6 15 6"></polyline>
+      <polyline id="front" points="1 6 4 6 6 11 10 1 12 6 15 6"></polyline>
+    </svg>
+  </div>
+</div>
 <mat-horizontal-stepper *ngIf="eventVenue != null">
   <mat-step label="Setup Event Venue">
     <form class="new-event-venue-form" #eventVenueCreationForm="ngForm">
