--- a/eventicoUI/src/app/events/events.component.html
+++ b/eventicoUI/src/app/events/events.component.html
@@ -1,127 +1,51 @@
 <mat-toolbar class="events-filter-toolbar">
   <mat-toolbar-row>
-    <mat-form-field>
-    <input type="text" placeholder="Search Events" aria-label="Number" matInput [formControl]="myControl" [matAutocomplete]="auto">
+    <mat-form-field class="half-width">
+    <input type="text"  placeholder="Search Events" aria-label="Number" matInput [formControl]="myControl" [matAutocomplete]="auto">
     <mat-autocomplete #auto="matAutocomplete">
       <mat-option *ngFor="let option of options" [value]="option">
         {{ option }}
       </mat-option>
     </mat-autocomplete>
     </mat-form-field>
-    <mat-divider [vertical]="true"></mat-divider>
-    <mat-divider [vertical]="true"></mat-divider>
-    <mat-divider [vertical]="true"></mat-divider>
-    <mat-divider [vertical]="true"></mat-divider>
-    <mat-divider [vertical]="true"></mat-divider>
-    <mat-form-field>
+
+    <span class="tollbar-splitter"></span>
+        <mat-form-field>
   <input matInput [matDatepicker]="picker" placeholder="Choose a date">
   <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
   <mat-datepicker #picker></mat-datepicker>
 </mat-form-field>
-    <span class="tollbar-splitter"></span>
-    <mat-form-field>
-    <input type="text" placeholder="Pick one" aria-label="Number" matInput [formControl]="myControl" [matAutocomplete]="auto">
-    <mat-autocomplete #auto="matAutocomplete">
-      <mat-option *ngFor="let option of options" [value]="option">
-        {{ option }}
-      </mat-option>
-    </mat-autocomplete>
-  </mat-form-field>
   </mat-toolbar-row>
 </mat-toolbar>
-<mat-divider></mat-divider>
-<mat-grid-list cols="3" rowHeight="1:1">
-  <mat-grid-tile>
-    <mat-card class="example-card">
-      <mat-card-header>
-        <mat-card-title>Event Name</mat-card-title>
-        <mat-card-subtitle>Event subtitle</mat-card-subtitle>
-      </mat-card-header>
-      <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-      <mat-card-content>
-        <p>
-          The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-          A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-          bred for hunting.
-        </p>
+<div class="spacer"></div>
+<div class="events-container">
+<mat-grid-list [cols]="cols | async" gutterSize="8px" [style.background-color]="'#f5f5f5'">
+  <mat-grid-tile *ngFor="let x of [1,2,3,4,5,6,7,8,9,0,3,4,5,6,7,8]">
+    <mat-card class="event-card">
+      <img mat-card-image class="card-image" src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+    <mat-card-content>
+    <div class="event_desc">
+        <div class="date_name_location">
+          <div class="event_date_month">
+            <p class="event_month">jun</p>
+            <p class="event_date">9</p>
+            <p class="event_day">sat</p>
+          </div>
+          <div class="event_name_location">
+            <h4 class="event_name">Asha Bhosle Live with Javed Ali - Sound of Silence</h4>
+            <a href="#" class="event_location">Phoenix Market City: Whitefield</a>
+            <p class="event_price" >Rs. 999 Onwards</p>
+          </div>
+        </div>
+      </div>
       </mat-card-content>
       <mat-card-actions>
-        <button mat-button>Book</button>
-        <button mat-button>SHARE</button>
-        <button mat-button>ACTIVATE</button>
-        <button mat-button>EDIT</button>
+        <button mat-button color="#cc3333cc" >Book</button>
+        <span class="toolbar-splitter"></span>
+        <button mat-icon-button routerLink=""><mat-icon aria-label="Settings">share</mat-icon></button>
+        <button mat-icon-button routerLink=""><mat-icon aria-label="Settings">edit</mat-icon></button>
       </mat-card-actions>
     </mat-card>
   </mat-grid-tile>
-  <mat-grid-tile>
-    <mat-card class="example-card">
-      <mat-card-header>
-        <mat-card-title>Event Name</mat-card-title>
-        <mat-card-subtitle>Event subtitle</mat-card-subtitle>
-      </mat-card-header>
-      <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-      <mat-card-content>
-        <p>
-          The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-          A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-          bred for hunting.
-        </p>
-      </mat-card-content>
-      <mat-card-actions>
-        <button mat-button>Book</button>
-        <button mat-button>SHARE</button>
-        <button mat-button>ACTIVATE</button>
-        <button mat-button>EDIT</button>
-      </mat-card-actions>
-    </mat-card>
-  </mat-grid-tile>
-  <mat-grid-tile>
-    <mat-card class="example-card">
-      <mat-card-header>
-        <mat-card-title>Event Name</mat-card-title>
-        <mat-card-subtitle>Event subtitle</mat-card-subtitle>
-      </mat-card-header>
-      <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-      <mat-card-content>
-        <p>
-          The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-          A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-          bred for hunting.
-        </p>
-      </mat-card-content>
-      <mat-card-actions>
-        <button mat-button>Book</button>
-        <button mat-button>SHARE</button>
-        <button mat-button>ACTIVATE</button>
-        <button mat-button>EDIT</button>
-      </mat-card-actions>
-    </mat-card>
-  </mat-grid-tile>
-  <mat-grid-tile><mat-card class="example-card">
-      <mat-card-header>
-        <mat-card-title>Event Name</mat-card-title>
-        <mat-card-subtitle>Event subtitle</mat-card-subtitle>
-      </mat-card-header>
-      <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-      <mat-card-content>
-        <p>
-          The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-          A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-          bred for hunting.
-        </p>
-      </mat-card-content>
-      <mat-card-actions>
-        <button mat-button>Book</button>
-        <button mat-button>SHARE</button>
-        <button mat-button>ACTIVATE</button>
-        <button mat-button>EDIT</button>
-      </mat-card-actions>
-    </mat-card></mat-grid-tile>
-  <mat-grid-tile></mat-grid-tile>
-  <mat-grid-tile></mat-grid-tile>
-  <mat-grid-tile></mat-grid-tile>
-  <mat-grid-tile></mat-grid-tile>
-  <mat-grid-tile></mat-grid-tile>
-
-  <mat-grid-tile></mat-grid-tile>
 </mat-grid-list>
+</div>
