--- a/eventicoUI/src/app/events/new-event/new-event.component.html
+++ b/eventicoUI/src/app/events/new-event/new-event.component.html
@@ -1,4 +1,9 @@
-<div  class="overlay" [style.display]="showOverlay"> <mat-spinner display='block'></mat-spinner> </div>
+<div class="indicator">
+  <svg width="16px" height="12px">
+    <polyline id="back" points="1 6 4 6 6 11 10 1 12 6 15 6"></polyline>
+    <polyline id="front" points="1 6 4 6 6 11 10 1 12 6 15 6"></polyline>
+  </svg>
+</div>
 <mat-horizontal-stepper>
   <mat-step label="Setup Event Info">
     <mat-card class="new-event-card">
