--- a/templates/index.html
+++ b/templates/index.html
@@ -82,10 +82,16 @@
   </div>
   </app-root>
   <!-- Compiled and minified JavaScript -->
-<script type="text/javascript" src="{% static 'inline.bundle.js' %}"></script>
-<script type="text/javascript" src="{% static 'polyfills.bundle.js' %}"></script>
-<script type="text/javascript" src="{% static 'styles.bundle.js' %}"></script>
-<script type="text/javascript" src="{% static 'vendor.bundle.js' %}"></script>
-<script type="text/javascript" src="{% static 'main.bundle.js' %}"></script>
+<!--<script type="text/javascript" src="{% static 'inline.bundle.js' %}"></script>-->
+<!--<script type="text/javascript" src="{% static 'polyfills.bundle.js' %}"></script>-->
+<!--<script type="text/javascript" src="{% static 'styles.bundle.js' %}"></script>-->
+<!--<script type="text/javascript" src="{% static 'vendor.bundle.js' %}"></script>-->
+<!--<script type="text/javascript" src="{% static 'main.bundle.js' %}"></script>-->
+<script type="text/javascript" src="{% static 'runtime.js' %}"></script>
+<script type="text/javascript" src="{% static 'polyfills.js' %}"></script>
+<script type="text/javascript" src="{% static 'styles.js' %}"></script>
+<script type="text/javascript" src="{% static 'scripts.js' %}"></script>
+<script type="text/javascript" src="{% static 'vendor.js' %}"></script>
+<script type="text/javascript" src="{% static 'main.js' %}"></script>
 </body>
 </html>
