--- a/eventicoUI/src/styles.css
+++ b/eventicoUI/src/styles.css
@@ -35,6 +35,15 @@ body
 
 }
 
+.vDivider {
+     border-left:1px solid #38546d;
+     border-right:1px solid #16222c;
+     height:80px;
+     position:absolute;
+     right:249px;
+     top:10px;
+}
+
 .seat-button
 {
 
